[package]
name = "rustp2p-transport"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.25"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
rustp2p = { git = "https://github.com/rustp2p/rustp2p",features = ["aes-gcm","chacha20-poly1305"] }
tcp_ip = "0.1.7"
bytes = "1.10.0"
pnet_packet = "0.35"
futures-util = "0.3.31"

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
