[package]
name = "rustp2p-transport"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "A Rust library for building a decentralized logical network, allowing nodes to communicate using IP, TCP, UDP, and ICMP protocols."
repository = "https://github.com/rustp2p/rustp2p-transport"

[dependencies]
log = "0.4.25"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
rustp2p = { version = "0.2.0", features = ["aes-gcm", "chacha20-poly1305"] }
tcp_ip = { version = "0.1.8" }
bytes = "1.10.0"
pnet_packet = "0.35"
futures-util = "0.3.31"

[features]
default = []
global = ["tcp_ip/global-ip-stack"]

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"

[[example]]
name = "connect"
required-features = ["global"]